2008-05-04  Jens Lautenbacher  <jtl@schlund.de>

	* projects/core/editor2/conf/edit.conf.xml: add a stophere="true" in the EditorJumpToPageFlow.
	* src/de/schlund/pfixcore/editor2/frontend/handlers/SelectProjectHandler.java: cosmetics
	* src/de/schlund/pfixcore/editor2/frontend/handlers/SelectPageHandler.java (needsData): check for the selected page to
	decide if we need data
	* src/de/schlund/pfixcore/editor2/frontend/resources/PagesResource.java (getSelectedPage): new method
	(reset): removed.
	
	* src/de/schlund/pfixcore/util/TransformerCallback.java (getIWrappers): also serialize the process actions
	if there are any configured.
	* src/de/schlund/pfixxml/config/impl/ProcessActionConfigImpl.java: add some helper annotations
	for better serializing
	* projects/core/xsl/xmlfontify.xsl: display the action information

2008-05-02  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* projects/core/script/editor.js: 
	* src/de/schlund/pfixcore/editor2/frontend/webservice/CommonIncludeState.java:
	Fixed problems with custom webservice implementation: "__action" parameter 
	caused problems, because this name is now reserved by Pustefix Core.
	
	* projects/common/conf/pustefix.xml: 
	* projects/servletconf/projects.xml.in: 
	* skel/common/conf/pustefix.xml: 
	Fixed problems that caused editor not to work when running with standalone.tomcat.
	 

2008-05-02  Martin Leidig  <mleidig@schlund.de>
	
	Changed version to 0.13.0-pre (build).

	* build.xml
	* pom.xml

2008-05-01  Jens Lautenbacher  <jtl@schlund.de>

	* projects/sample1/txt/pages/main_phantom.xml: 
	* projects/sample1/conf/depend.xml: 
	* projects/sample1/conf/config.conf.xml: added new test page...
	
	* src/de/schlund/pfixxml/AbstractXMLServlet.java: use an enum for render modes. cosmetics.
	
	* src/de/schlund/pfixxml/ContextXMLServlet.java: cosmetics
	
	* src/de/schlund/pfixcore/workflow/app/DefaultIWrapperState.java (getDocument): page message, also make sure